# cesmconfigui

./: .gitignore  CIMEconfigurator.pyw  ConfigUI.pyw  README.md  setup.cfg
classes/: CIME_interface.py  GIT_interface.py  MachineXMLEditor.py
scripts/: CIMEconfigurator.pyw
scripts/config/: reader_options.json
src/: CIME_interface.py  __init__.py
