[metadata]
name = CIMEconfigurator
version = 0.0.1
author = <Jim Edwards>
author_email = jedwards@ucar.edu
description = A Tool to manage CESM system configuration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jedwards4b/cesmconfigui
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Linux, macos
license_files = LICENSE.text

